[Fix] -> Site Identity logo width gap between label and slider.

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -740,7 +740,6 @@
   font-size: 14px;
   padding: 0 5px 0 0;
   font-weight: 400;
-  display: inline-block;
   position: relative;
 }
 
@@ -772,7 +771,6 @@
   height: 22px;
   font-size: 12px;
   padding: 3px;
-  display: inline-block;
 }
 
 .astra_range_value .ast-range-unit {
@@ -784,7 +782,7 @@
 }
 
 .customize-control-ast-responsive-slider .input-field-wrapper.active {
-  display: inline-flex;
+  display: flex;
   justify-content: space-between;
   margin-left: 0;
   flex: 0 1;
@@ -1777,6 +1775,7 @@ span.select2-container.select2-container--default.select2-container--open li.sel
 
 .customize-control-ast-responsive-slider .wrapper {
   position: relative;
+  height: 100%;
 }
 
 .customize-control-ast-responsive-slider .input-field-wrapper {
