--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -421,6 +421,7 @@
 
 .customize-control-ast-responsive-slider .wrapper {
   position: relative;
+  height: 100%;
 }
 
 .customize-control-ast-responsive-slider .input-field-wrapper {
