--- a/inc/customizer/custom-controls/responsive-slider/responsive-slider.scss
+++ b/inc/customizer/custom-controls/responsive-slider/responsive-slider.scss
@@ -1,6 +1,7 @@
 .customize-control-ast-responsive-slider {
   .wrapper {
     position: relative;
+    height: 100%;
   }
   .input-field-wrapper {
     display: -webkit-box;
